fix for overflow breaking height

--- a/styles/global/_globals.css
+++ b/styles/global/_globals.css
@@ -7,7 +7,7 @@ body {
 
 html,body {
   width: 100%;
-  height: 100%;
+  height: fit-content;
   overflow-x: hidden;
 }
 
